1. FIx trading history on advanced bots 2. Table on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -53,8 +53,11 @@ input:-webkit-autofill:active {
   #__nuxt::-webkit-scrollbar {
     display: none;
   }
-
-
+  .v-data-table > .v-data-table__wrapper > table > tbody > tr {
+    padding-bottom: 25px;
+    padding-top: 25px;
+    border-bottom: thin solid gray;
+  }
 }
 
 /* prevent pull-to-refresh for Safari 16+ */
